# wjj-rust

./: .gitignore  Cargo.toml
base/base_01_guide/: Cargo.toml
base/base_02_extend/: Cargo.toml
common/: Cargo.toml
common/common_core/: Cargo.toml
common/common_core/src/: env.rs  err.rs  lib.rs
common/common_lib/: Cargo.toml
common/common_macros/: Cargo.toml
common/common_macros_internals/: Cargo.toml
common/common_test/: Cargo.toml
common/src/: core.rs  lib.rs
src/: lib.rs  main.rs
src/_02_primitives/: _00_main.rs  _01_literals_and_operators.rs  _02_tuples.rs  _03_arrays_and_slices.rs  mod.rs
src/_03_custom_types/: _00_main.rs  _01_structures.rs  _02_enums_01.rs  _02_enums_02.rs  _02_enums_11_use.rs  _02_enums_12_c_like.rs  _02_enums_12_c_testcase_linked_list.rs  _03_constants.rs  mod.rs
src/_04_variable_bindings/: _00_main.rs  _01_mutability.rs  _02_scope_and_shadowing_01.rs  _02_scope_and_shadowing_02.rs  _03_declare_first.rs  _04_freezing.rs  mod.rs
src/_05_types/: _00_main.rs  _01_casting.rs  _02_literals.rs  _03_inference.rs  _04_aliasing.rs  mod.rs
src/_06_conversion/: _00_main.rs  _01_from_and_into.rs  _01_from_and_into_11_from.rs  _01_from_and_into_12_into.rs  _01_from_and_into_13_exchange.rs  _02_try_from_and_try_into.rs  _03_to_and_from_strings_01_to_string.rs  _03_to_and_from_strings_02_from_string.rs  mod.rs
src/_07_expressions/: _00_main.rs
src/_08_flow_of_control/: _00_main.rs  _01_if_else.rs  _02_loop.rs  _02_loop_11_nesting_and_labels.rs  _02_loop_12_returning_from_loops.rs  _03_while.rs  _04_for_and_range_01.rs  _04_for_and_range_02_iter.rs  _05_match.rs  _05_match_11_destructuring.rs  _05_match_11_destructuring_11_tuples.rs  _05_match_11_destructuring_12_arrays_slices.rs  _05_match_11_destructuring_13_enums.rs  _05_match_11_destructuring_14_pointer_ref.rs  _05_match_11_destructuring_15_struct.rs  _05_match_12_guards.rs  _05_match_13_binding.rs  _06_if_let.rs  _07_let_else.rs  _08_while_let.rs  mod.rs
src/_09_functions/: _00_main.rs  _01_methods.rs  _02_closures.rs  _02_closures_11_capturing.rs  _02_closures_12_as_input_parameters.rs  _02_closures_13_type_anonymity.rs  _02_closures_14_input_functions.rs  _02_closures_15_as_output_parameters.rs  _02_closures_16_example_in_std_11_iterator_any.rs  _02_closures_16_example_in_std_12_searching_through_iterators.rs  _03_higher_order_functions.rs  _04_diverging_functions.rs  mod.rs
src/_10_modules/: _00_main.rs  _01_visibility.rs  _02_struct_visibility.rs  _03_the_use_declaration.rs  _04_super_and_self.rs  mod.rs
src/_11_crates/: _02_using_a_library.rs
src/_12_cargo/: _00_main.rs  _02_conventions.rs
src/_13_attributes/: _00_main.rs  _01_dead_code.rs  _02_crates.rs  _03_cfg.rs  _03_cfg_11_custom.rs
src/_14_generics/: _00_main.rs  _01_functions.rs  _02_implementation.rs  _03_traits.rs  _04_bounds.rs  _04_bounds_11_testcase_empty_bounds.rs  _05_multiple_bounds.rs  _06_where_clauses.rs  _07_new_type_idiom.rs  _08_associated_items_11_the_problem.rs  _08_associated_items_12_associated_types.rs  _09_phantom_type_parameters.rs  _09_phantom_type_parameters_11_testcase_unit_clarification.rs  mod.rs
src/_15_scoping_rules/: _00_main.rs  _01_raii_01.rs  _01_raii_02_destructor.rs  _02_ownership_and_moves.rs  _02_ownership_and_moves_11_mutability.rs  _02_ownership_and_moves_12_partial_moves.rs  (+18 more)
wjj_lib/: Cargo.toml
(+315 files in other folders)
