#https://doc.rust-lang.org/cargo/reference/workspaces.html
#[workspace] — Defines a workspace.
#    resolver — Sets the dependency resolver to use.
#    members — Packages to include in the workspace.
#    exclude — Packages to exclude from the workspace.
#    default-members — Packages to operate on when a specific package wasn’t selected.
#    package — Keys for inheriting in packages.
#    dependencies — Keys for inheriting in package dependencies.
#    lints — Keys for inheriting in package lints.
#    metadata — Extra settings for external tools.
#[patch] — Override dependencies.
#[replace] — Override dependencies (deprecated).
#[profile] — Compiler settings and optimizations.

[workspace]
resolver = "3"
members = [
    "base/base_01_guide",
    "base/base_02_extend",
    "deps/dep_async",
    "deps/dep_error",
    "deps/dep_log",
    "deps/dep_orm/dep_orm_rbatis",
    "deps/dep_orm/dep_orm_sea_orm",
    "deps/dep_orm/dep_orm_sea_orm/db/migration",
    "deps/dep_orm/dep_orm_sqlx",
    "deps/dep_rising_wave",
    "deps/dep_rpc/dep_rpc_grpc_tonic",
    "deps/dep_serialization",
    "deps/dep_strum",
    "deps/dep_template",
    "deps/dep_web",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91.1"

[workspace.dependencies]
paste = "1.0.15"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }

#[workspace.metadata]
#ci = { pipeline = "github-actions" }
#
#[patch.crates-io]
#serde = { git = "https://github.com/serde-rs/serde", branch = "main" }
#
#[profile.release]
#opt-level = 3
#lto = true
