[package]
name = "common_core"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib", "dylib"]  # inventory 需要 dylib

[dependencies]
common_macros = { path = "../common_macros" }
serde_json = "1.0.148"
minijinja = "2.14.0"
once_cell = "1.21.3"
linkme = { version = "0.3.35", public = true }
ctor = "0.6.3"
